--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,12 @@
+<div class="container">
 <div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
 
     <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+      <div class="form-group mb-3">
+        <label class="form-label" for="email-login">Email:</label>
+        <input class="form-input form-control" type="text" id="email-login" />
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
@@ -37,6 +38,7 @@
       </div>
     </form>
   </div>
+</div>
 </div>
 
 <script src="./js/login.js"></script>
