--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,19 +1,20 @@
 <div class="container">
-    <h2>Login</h2>
-<form>
+    <h2>SIGN UP</h2>
+<form class="signup-form">
   <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <label for="name-signup" class="form-label">Username</label>
+    <input type="name" class="form-control" id="name-signup" aria-describedby="emailHelp">
   </div>
   <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+  <div class="mb-3">
+    <label for="email-signup" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="email-signup" aria-describedby="emailHelp">
   </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  <div class="mb-3">
+    <label for="password-signup" class="form-label">Password</label>
+    <input type="password" class="form-control" id="password-signup">
   </div>
+  <div><a href="/login">LOGIN HERE</a></div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </div>
