--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -17,21 +17,8 @@
         <button id='newPost' type="button" class="btn btn-primary col-3">New Post</button>
     </div>
     {{#each dashboard.posts}}
-    <div class="row justify-content-center">
-    <div class="col-8">
-        <h2>Create New Post</h2>
-        <div id="post-form" class="mb-3">
-            <label for="post-title" class="form-label">Title</label>
-            <input type="title" class="form-control" id="post-title">
-        </div>
-        <div class="mb-3">
-            <label for="post-content" class="form-label">Content</label>
-            <textarea class="form-control" id="post-content" rows="5"></textarea>
-        </div>
-        <button id="submit" type="submit" class="btn btn-primary">Create Post</button>
-    </div>
-    </div>
+    <a class="btn btn-primary col-12" href="#" role="button">{{title}}</a>
     {{/each}}
 </div>
 
-<script src="./js/newPost.js"></script>
+<script src="/js/dashboard.js"></script>
