--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -14,17 +14,19 @@
 
 <div class="container">
     <div class="row justify-content-center">
-    <div class="col-8">
-        <h2>Create New Post</h2>
-        <div id="post-form" class="mb-3">
-            <label for="post-title" class="form-label">Title</label>
-            <input type="title" class="form-control" id="post-title">
-        </div>
-        <div class="mb-3">
-            <label for="post-content" class="form-label">Content</label>
-            <textarea class="form-control" id="post-content" rows="5"></textarea>
-        </div>
-        <button id="submit" type="submit" class="btn btn-primary">Create Post</button>
-    </div>
+        <form id="post-form" class="col-8">
+            <h2>Create New Post</h2>
+            <div class="mb-3">
+                <label for="post-title" class="form-label">Title</label>
+                <input type="title" class="form-control" id="post-title">
+            </div>
+            <div class="mb-3">
+                <label for="post-content" class="form-label">Content</label>
+                <textarea class="form-control" id="post-content" rows="5"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Create Post</button>
+        </form>
     </div>
 </div>
+
+<script src="/js/newPost.js"></script>
