--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,15 +13,10 @@
 </div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-  </div>
+  {{#each posts}}
+  {{user.name}}
+  {{format_date createdAt}}
+  {{title}}
+  {{post_content}}
+  {{/each}}
 </div>
