--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,3 +1,7 @@
-<div class="container">
-
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">{{title}}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Posted by: {{user.name}} on {{format_date createdAt}}</h6>
+    <p class="card-text">  {{post_content}}</p>
+  </div>
 </div>
