--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container nav-container">
     <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/">HOME</a>
