--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,19 +1,19 @@
-<div class="container">
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/">HOME</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/dashboard">DASHBOARD</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link logout" href="/logout">LOGOUT</a>
-  </li>
-</ul>
+<div class="container nav-container">
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="/">HOME</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/dashboard">DASHBOARD</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link logout" href="/logout">LOGOUT</a>
+    </li>
+  </ul>
 </div>
 
 <div class="container">
   {{#each posts}}
-    {{>post}}
+  {{>post}}
   {{/each}}
 </div>
