--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card homepage-posts">
   <div class="card-body">
     <h5 class="card-title">{{title}}</h5>
     <h6 class="card-subtitle mb-2 text-muted">Posted by: {{user.name}} on {{format_date createdAt}}</h6>
