--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -4,4 +4,5 @@
     <h6 class="card-subtitle mb-2 text-muted">Posted by: {{user.name}} on {{format_date createdAt}}</h6>
     <p class="card-text">  {{post_content}}</p>
   </div>
+  <a href="/post/{{id}}">View &amp; Comment</a>
 </div>
